Add e2e test with mock collector (#24)
* add e2e standone test

Co-authored-by: kezhenxu94 <kezhenxu94@163.com>